tests/fail/union_fun_def.py
def foo(x: float | int) -> str:
    return x
